BufferService fix