@@ -3,6 +3,7 @@ package org.bot.db.services;
 import org.bot.db.data.MessageDataEntity;
 import org.bot.db.repositories.MessageDataRepository;
 import org.bot.map.data.MessageData;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -20,30 +21,27 @@ public class BufferService {
       return messageDataRepository.existsById(BEFORE_KEY + key);
    }
 
-   public MessageData saveWithChange(Long key, MessageData messageData) {
+   public MessageData saveWithChange(Long key, @NotNull MessageData messageData) {
       return messageDataRepository
             .save(new MessageDataEntity(BEFORE_KEY + key, List.of(messageData)))
             .getMessageDataList()
-            .get(0);
+            .getFirst();
    }
 
    public MessageData find(Long key) {
-      if (!containsKey(key)) {
-         return null;
+      Optional<MessageDataEntity> optional = messageDataRepository.findById(BEFORE_KEY + key);
+      if (optional.isPresent()) {
+          MessageDataEntity messageDataEntity = optional.get();
+          if (messageDataEntity.getMessageDataList() != null && !messageDataEntity.getMessageDataList().isEmpty()) {
+              return optional.get().getMessageDataList().get(0);
+          }
       }
-      return messageDataRepository
-            .findById(BEFORE_KEY + key)
-            .get()
-            .getMessageDataList()
-            .get(0);
+      return null;
    }
 
    public MessageData remove(Long key) {
-      Optional<MessageDataEntity> optional = messageDataRepository.findById(BEFORE_KEY + key);
-      if (optional.isPresent()) {
-         messageDataRepository.deleteById(BEFORE_KEY + key);
-         return optional.get().getMessageDataList().get(0);
-      }
-      return new MessageData();
+      MessageData messageData = find(key);
+      messageDataRepository.deleteById(BEFORE_KEY + key);
+      return messageData != null ? messageData : new MessageData();
    }
 }
